# Tri_Duy_Dat

./: README.md  Titanic_DataPreProcessing.ipynb  Titanic_EDA.ipynb  Titanic_ML_Disaster.ipynb  Titanic_Model_Train_Lab_1(Duy's).ipynb  Titanic_Model_Train_Lab_1(Duy's)_v2.ipynb  Titanic_Model_Train_Lab_1(Duy's)_v3.ipynb  Titanic_Model_Train_Lab_2(Tri's).ipynb  Titanic_PreProcessing.ipynb  Titanic_PreProcessing_v1.ipynb  Titanic_PreProcessing_v2.ipynb  Titanic_PreProcessing_v3.ipynb  Titanic_PreProcessing_v4.ipynb  main.ipynb  pred_result_survived_Lab_1.ipynb  train_clean.csv
EDA/: EDA.ipynb  (+1 more)
final_project/: .gitignore  Makefile  README.md  pyproject.toml
final_project/.cursor/rules/: rule.mdc
final_project/configs/: config.yaml  experiment_vn30_markowitz.yaml  vn30_fixed_list.yaml
final_project/configs/backtest/: backtest_default.yaml
final_project/configs/calendar/: calendar_default.yaml
final_project/configs/data/: data_default.yaml
final_project/configs/features/: features_default.yaml
final_project/configs/markowitz_manual/: markowitz_manual_default.yaml
final_project/configs/markowitz_pypfopt/: markowitz_pypfopt_default.yaml
final_project/configs/paths/: paths_default.yaml
final_project/configs/preprocess/: preprocess_default.yaml
final_project/reports/: PROJECT_REPORT.md
final_project/scripts/: generate_hose_calendar.py  plot_strategy_performance.py
final_project/tests/: __init__.py  test_benchmark_analysis.py  test_estimators.py  test_fetch.py  test_markowitz_visualization.py  test_optimize.py  test_preprocess.py  test_returns.py
(+77 files in other folders)
